feat: implement GitHub Pages build and deployment workflow with documentation updates

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "build": "node scripts/build-nostrclient.mjs",
     "build:democlient": "node scripts/build-democlient.mjs",
     "build:embedclients": "node scripts/build-embedclients.mjs",
+    "build:pages": "node scripts/build-pages.mjs",
     "build:signer": "node scripts/build-signer.mjs",
     "build:identity-link:wordpress": "node scripts/build-identity-link-wordpress.mjs",
     "build:indenty-link:wordpress": "npm run build:identity-link:wordpress"
